Fixed Fonts and style/wrapping, save changes button

--- a/src/styles/blog/post.scss
+++ b/src/styles/blog/post.scss
@@ -39,6 +39,7 @@
             margin-top: 15px;
         }
         .post-description {
+            font-family: monospace;
             font-size: 16px;
             line-height:24px;
             margin-top: 15px;
